--- a/web/package.json
+++ b/web/package.json
@@ -3,15 +3,17 @@
   "version": "1.0.0",
   "private": false,
   "dependencies": {
-    "node-sass-chokidar": "0.0.3",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-redux": "^5.0.6",
+    "@material-ui/core": "^3.6.1",
+    "@material-ui/icons": "^3.0.1",
+    "node-sass-chokidar": "1.3.4",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.13",
-    "redux": "^3.7.2",
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
     "redux-local-storage": "^1.4.1",
-    "whatwg-fetch": "^2.0.3"
+    "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src -o src",
@@ -20,5 +22,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
