--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,10 @@ services:
     image: mkenney/npm
     volumes:
       - './web:/src'
+  web:
+    image: nginx:latest
+    ports:
+      - '8080:80'
+    volumes:
+      - './web/build:/app'
+      - './docker/nginx/site.conf:/etc/nginx/conf.d/site.conf'
